# workbee

./: .gitignore  README.md  deploy-vercel.sh  deploy.md  package-lock.json  package.json  vercel.json
backend/: .dockerignore  .env  .gitignore  Dockerfile  README_UPDATES.md  SCRAPER_STATUS_REPORT.md  fix_all_issues.py  fix_scrapers.py  main.py  package-lock.json  pyproject.toml  requirements.txt  scraper_test_results.json  script.sh  setup_driver.py  update_scrapers.py
backend/.github/workflows/: debug-ssh.yml  deploy.yml
backend/app/config/: setup_chrome_driver.py
backend/companies/: Polygon.py  alphagrep.html  alphagrep.py  amazon.html  amazon.py  amd.py  arcesium.py  atlassian.py  bny.py  brave.py  cisco.py  clevertap.py  codenation.py  cognizant.py  dropbox.py  dunzo.py  exonmobil.py  gartner.py  google.py  hcl.py  hubspot.py  jio.py  kpmg.py  mcafee.py  micron.py  navi.py  nvidia.py  paloalto.py  quantbox.py  rippling.py  siemens.py  texas_instrument.py  viasat.py  walmart.py  workday.py  yahoo.py  yellowai.py
frontend/: ANDROID_SETUP.md  build-android.sh  capacitor.config.json  index.html  package-lock.json  package.json  run-android.sh  tsconfig.json  vercel.json
mainScrapper/: README.md  airbnb_jobs.json  all_jobs.json  amazon_jobs.json  amd_jobs.json  apple_jobs.json  base_scraper.py  fix_duplicates.py  google_jobs.json  main_scraper.py  meta_jobs.json  microsoft_jobs.json  nvidia_jobs.json  spotify_jobs.json  stripe_jobs.json  tesla_jobs.json
scrapper/: Brave.py  Coinbase.py  DropBox.py  Dunzo.py  Exonmobil.py  Jupiner.py  LTI.py  MAQ.py  Polygon.py  (+78 more)
(+87 files in other folders)
