[project]
name = "job-listing-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromedriver-binary>=139.0.7225.0.0",
    "fastapi>=0.115.12",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "uvicorn>=0.34.3",
    "webdriver-manager>=4.0.2",
]
